<resources>
    <string name="usage">Usage</string>
    <string name="notifications">Notifications</string>
    <string name="grayscale">Grayscale</string>
    <string name="infinite_scrolling">Infinite scrolling blocker</string>
    <string name="hello">Hello</string>
    <string name="one_hour">1H</string>
    <string name="two_hours">2H</string>
    <string name="minutes">m</string>
    <string name="minute">Minute</string>
    <string name="hours">h</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="daily_limit">Daily limit</string>
    <string name="social">social</string>
    <string name="productivity">productivity</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_results">No results</string>
    <string name="category_maps">Maps</string>
    <string name="category_social">Social</string>
    <string name="category_productivity">Productivity</string>
    <string name="category_game">Game</string>
    <string name="category_video">Video</string>
    <string name="category_news">News</string>
    <string name="category_other">Other</string>
    <string name="total_usage">Total usage:</string>
    <string name="package_not_found_error">Unknown error: are sure the app is installed?</string>
    <string name="search">Search</string>
    <string name="close_search">Close search</string>
    <string name="open_search_field">Open search field</string>
    <string name="notify_me_channel_id" translatable="false">notify_me</string>
    <string name="notify_me_channel">Notify me</string>
    <string name="notify_me_channel_description">A reminder to check your filtered notification at your desired time.</string>
    <string name="check_filtered_notifications">Check your filtered notifications</string>
    <string name="you_have_unchecked_filtered_notifications">You have filtered notifications you haven\'t checked</string>
    <string name="back">Back</string>
    <string name="notifications_filter_settings">Notification filter settings</string>
    <string name="clear_all">Clear All</string>
    <string name="tap_to_set_new_time">Tap to set a new time</string>
    <string name="notify_me">Notify Me</string>
    <string name="notify_me_description">Notify me to check filtered notifications daily</string>
    <string name="exceptions">Exceptions</string>
    <string name="notifications_filter">Notifications Filter</string>
    <string name="notification_filter_schedule">Filter schedule</string>
    <string name="notification_filter_schedule_description">Filter notifications only on the days and times you choose</string>
    <string name="notification_filter_schedule_start_time">Start time</string>
    <string name="notification_filter_schedule_end_time">End time</string>
    <string name="notification_filter_schedule_all_day">Filter is active all day when start and end times are the same</string>
    <string name="notification_filter_schedule_no_days">No days selected, notifications won\'t be filtered</string>
    <string name="percent" translatable="false">%</string>
    <string name="infinite_scroll_blocker_settings">Infinite Scroll Blocker Settings</string>
    <string name="infinite_scroll_blocker">Infinite Scrolling Blocker</string>
    <string name="hey">Hey, Farhan here!!</string>
    <string name="infinite_scroll_dialog_message">Looks like you are stuck in an infinite scrolling.</string>
    <string name="take_me_out_of_here">TAKE ME OUT OF HERE</string>
    <string name="continue_scrolling">Continue scrolling …</string>
    <string name="exclude_this_app_press_and_hold">Exclude this app (Press and hold)</string>
    <string name="app_excluded">App excluded</string>
    <string name="enable_grayscale_for_white_listed_apps">Enable Grayscale for affected apps</string>
    <string name="white_lited_apps">Affected apps</string>
    <string name="grayscale_state_color">Color</string>
    <string name="grayscale_state_leave_as_is">Keep as is</string>
    <string name="grayscale_system_apps_hint">System apps (like the app switcher and share menu) keep the screen as is by default, so they don\'t flip the color filter while you are switching between apps.</string>
    <string name="grayscale_onboarding_message">One of the ways apps compete for your time and attention is through colors, using grayscale Farhan can disable colors for selected apps when you lunch them eliminating their effect on you!</string>
    <string name="on_boarding_image_description">Onboarding image</string>
    <string name="next">Next</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="accessibility_service_name">Farhan Accessibility service</string>
    <string name="accessibility_service_description">This service is required for functionalities like infinite scroll blocker or screen grayscale to work</string>
    <string name="usage_permission_msg">Usage permission is not granted :(</string>
    <string name="usage_permission_sub_msg">Farhan needs usage access to display your usage information</string>
    <string name="grant_access">Grant access</string>
    <string name="how">How?</string>
    <string name="how_to_enable_permission">How to enable permission</string>
    <string name="ok">OK</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="appear_on_top_permission_not_granted">Appear on top permission is not granted :(</string>
    <string name="appear_on_top_permission_needed_message">Farhan needs Appear on top access to help you break Infinite scrolling</string>
    <string name="remind_me_to_stop_scrolling_after">Remind me to stop after</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="accessibility_permission_not_granted">Accessibility Service is not running :(</string>
    <string name="accessibility_permission_needed_message">Farhan needs accessibility service to be able to:</string>
    <string name="one_more_thing">One more thing!</string>
    <string name="infinite_scroll_onboarding_message">Infinite scrolling is a technique used by apps to keep giving you new content no matter how much you scroll thus reducing your control over your time, Farhan can try to detect when you are stuck in an infinite scroll and remind you to get out of that app!</string>
    <string name="notification_filter_onboarding_message">Notifications are like an alarm except that they can distract you at any time without you even knowing when, Farhan can eliminate this distraction by filtering notification so you won\’t be distracted, you can exclude important apps that you want to get notifications from and the rest will get filtered and you can come to the app and see them at any time!</string>
    <string name="notification_permission_not_granted">Notification permission is not granted :(</string>
    <string name="notification_filter_needed_message">Farhan needs notification access for Notification filter to work</string>
    <string name="no_notifications">No notifications</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="tip_icon_description">Tip icon</string>
    <string name="get_started">Get Started</string>
    <string name="skip_now">Skip Now</string>
    <string name="no_internet_permission">No Internet Permission!</string>
    <string name="no_internet_permission_desc">Farhan does not connect to the internet in anyway, in fact it does\'nt even have an internet permission, so your data stays on your phone</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_desc">Anyone can see how Farhan works by viewing the source code on GitHub</string>
    <string name="use_farhan_be_farhan">Use Farhan, Be Farhan!</string>
    <string name="use_farhan_be_farhan_desc">Let your phone work for you, Not the other way around!</string>
    <string name="about_app">About app</string>
    <string name="about_app_content">Farhan is an open source android project that offers different tools for you to help you lower the effect of apps manipulating strategies that are used to drain your time and attention, so you can use your phone but not the other way around!</string>
    <string name="developer">Developer:</string>
    <string name="taha_name_dev">Taha Ben Ashur (Tahaak67)</string>
    <string name="source_code">Source code:</string>
    <string name="soon">Soon</string>
    <string name="app_name">Farhan</string>
    <string name="notification_service_name">Notification service</string>
    <string name="drop_down_menu">Dropdown menu</string>
    <string name="secure_settings_permission_msg">Secure settings permission is not granted :(</string>
    <string name="secure_settings_permission_sub_msg">Farhan needs Secure settings permission to grayscale the screen for you</string>
    <string name="device_root_detected_msg">Looks like your device is rooted!, use the button below if you want to grant the permission with root</string>
    <string name="accessibility_permission_needed_grayscale_message">Farhan needs accessibility service to be able to:</string>
    <string name="no_device_root_detected_msg">To Grant this permission you will need a PC, don\'t worry you only have to do it once and it only takes a few minutes</string>
    <string name="launcher_settings">Launcher Settings</string>
    <string name="launcher">Launcher</string>
    <string name="clear_text">Clear text</string>
    <string name="set_default_launcher_title">Set Farhan as your launcher</string>
    <string name="set_default_launcher_text">Please select Farhan to set it as your default launcher</string>
    <string name="set_other_default_launcher_text">Please select the other launcher you want to use</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="change_default_launcher_sub">Select Farhan in the system settings to use it as your launcher, or pick another launcher to switch back</string>
    <string name="dialer">Dialer</string>
    <string name="camera">Camera</string>
    <string name="reason_know_if_app_in_exceptions">Know if current app is in exceptions list or not</string>
    <string name="reason_know_how_much_you_scroll">Know How much you scroll and how much items are on screen.</string>
    <string name="reason_display_warning_if_infinite_scroll_detected">Display a message if we detect infinite scrolling.</string>
    <string name="reason_know_if_app_in_whitelist">Know if current app is in the affected apps list or not</string>
    <string-array name="tips">
        <item>@string/productivity_tip1</item>
        <item>@string/notification_filter_exception_tip</item>
        <item>@string/grayscale_whitelist_tip</item>
        <item>@string/notification_filter_notifyme_tip</item>
        <item>@string/beta_version_tip</item>
    </string-array>
    <string name="productivity_tip1">To improve productivity during work hours switch your phone to silent and keep it out of sight (Ex: in a drawer)</string>
    <string name="notification_filter_exception_tip">Don\'t want to miss a notification from an app? make sure to exclude that app in notification filter</string>
    <string name="notification_filter_notifyme_tip">Use notify me in notifications filter and set a time to be notified to check your filtered notifications daily</string>
    <string name="grayscale_whitelist_tip">When Grayscale is on, only affected apps will be grayscaled</string>
    <string name="usage_for_today">Usage for today</string>
    <string name="time_is_up">Time is up!</string>
    <string name="or_add_more_time">Or add more time …</string>
    <string name="one_min">1 min</string>
    <string name="three_min">3 min</string>
    <string name="five_min">5 min</string>
</resources>